--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,10 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile libraries.junit
+    testImplementation libraries.junit
     implementation libraries.glide
     implementation libraries.design
     implementation libraries.rxjava
